separating css files

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -24,297 +24,24 @@ li{
 
 .common{
   margin-left: 200px;
-  height:100vh;
-}
-/* FOR NAVIGATION */
-
-nav{
-    position: fixed;
-    float: left;
-}
-.vertical-menu {
-    width: 200px;
-    height:100vh;
-    background: white ;
-    color: grey;
-    box-shadow: 0 5px 10px 8px #888888;
-  }
-
-.vertical-menu a{
-    
-    width: 100%;
-    color: grey;
-  }
-
-.vertical-menu hr{
-    
-    margin-bottom: 0;
-  }
-
-.vertical-menu h2{
-    text-align: center;
-    padding:30px 5px 5px 5px; 
-    background: white ;
-    color: grey;
-    font-weight: 400;
-  }
-
-.vertical-menu h3{
-    text-align: center;
-    padding:0px 5px 0px 5px; 
-    margin: 0;
-    font-weight: 400;
-  }
-
-.vertical-menu ul{
-    margin-top: 0;
-    padding-left:0;
+  min-height:100vh;
 }
 
-.vertical-menu li{
+@import "./navigation.css";
 
-    padding: 10px 0px 10px 20px;
-    cursor: pointer;
-    font-size: 20px;
-}
+@import "./home.css";
 
-.vertical-menu li:hover {
-  background: #f2f3f4;
-  border: 1px solid #f2f3f4;
-}
+@import "./about.css";
 
-.vertical-menu .intro{
-  cursor: pointer;
-}
+@import "./experience.css";
 
-.vertical-menu li .active{
-  color: black;
-}
-/**************************************/
+@import "./projects.css";
 
-/* For Home */
+@import "./skills.css";
 
-.home{
-  background: url('../images/bg.jpg') no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  text-align: center;
-  color: white;
-  font-size: 25px;
-}
+@import "./education.css";
 
-.typewriter h1 {
-  background:none;
-  overflow: hidden;
-  border-right: .15em solid white;
-  white-space: nowrap;
-  letter-spacing: .15em;
-  box-shadow: 0 0px 0px 0px;
-  margin: 0;
-  padding: 0;
-}
-
-.typewriter h1:nth-child(1) {
-  position: relative;
-  top:250px;
-  width: 100%;
-  -webkit-animation: type 2s steps(40, end);
-  animation: type 2s steps(40, end);
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-.typewriter h1:nth-child(2) {
-  position: relative;
-  top:260px;
-  width: 100%;
-  opacity: 0;
-  -webkit-animation: type2 2s steps(40, end);
-  animation: type2 2s steps(40, end);
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-}
-
-@keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid white;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@-webkit-keyframes type {
-  0% {
-    width: 0;
-  }
-  99.9% {
-    border-right: .15em solid white;
-  }
-  100% {
-    border: none;
-  }
-}
-
-@keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid white;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-@-webkit-keyframes type2 {
-  0% {
-    width: 0;
-  }
-  1% {
-    opacity: 1;
-  }
-  99.9% {
-    border-right: .15em solid white;
-  }
-  100% {
-    opacity: 1;
-    border: none;
-  }
-}
-
-
-
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-@-webkit-keyframes blink {
-  50% {
-    border-color: tranparent;
-  }
-}
-
-/**********************************/
-
-/* About Page */
-
-.about{
-  background: white;
-  color: grey;
-  font-size: 25px;
-
-}
-
-.about p {
-  margin: 0;
-  padding-left: 25px;
-  font-size: 1em;
-}
-
-.about .profile{
-  background:  url('../images/profile.png') no-repeat;
-  width: 290px;
-  height: 290px;
-  object-fit: contain;
-  margin:20px;
-  border: 0;
-  position: relative;
-  left:400px;
-  
-}
-
-/******************************/
-
-/* Experience */
-.experience{
-  background: white;
-  color: grey;
-  font-size: 25px;
-}
-
-.experience h1 {
-  color: white;
-  padding: 20px;
-  font-weight: 400;
-}
-
-/*****************************/
-
-/* Projects */
-.projects{
-  background: white;
-  color: grey;
-  font-size: 25px;
-}
-
-.projects h1 {
-  color: white;
-  padding: 20px;
-  font-weight: 400;
-}
-
-/*********************/
-
-/* SKills */
-
-.skills{
-  background: white;
-  color: grey;
-  font-size: 25px;
-}
-
-.skills h1 {
-  color: white;
-  padding: 20px;
-  font-weight: 400;
-}
-/**************/
-
-/* Education */
-
-.education{
-  background: white;
-  color: grey;
-  font-size: 25px;
-}
-
-.education h1 {
-  color: white;
-  padding: 20px;
-  font-weight: 400;
-}
-
-/*******************/
-
-/* Contact */
-
-.contact{
-  background: white;
-  color: grey;
-  font-size: 25px;
-}
-
-.contact h1{
-  color: white;
-  padding: 20px;
-  font-weight: 400;
-}
-
-/******************/
+@import "./contact.css";
 
 
 
