--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -4,12 +4,12 @@ body{
 
 h1,h2,h3{
     margin: 0;
+    font-weight: 400;
 }
 h1{
   background: #619E89;
   color: white;
   padding: 25px;
-  font-weight: 400;
   box-shadow: 0 5px 10px 8px #888888;
 }
 
@@ -27,6 +27,42 @@ li{
   min-height:100vh;
 }
 
+.experience-comp {
+  margin: 80px 200px 80px 200px;
+  padding: 5px;
+  border: 1px solid grey;
+}
+
+.experience-comp ul {
+  margin-top: 60px;
+}
+
+.experience-comp li{
+  list-style: disc;
+  font-size: 20px;
+}
+
+.experience-comp .company{
+  float: left;
+  font-size: 30px;
+}
+
+.experience-comp .role{
+  float: right;
+  font-size: 25px;
+  margin-top: 5px;
+}
+
+.experience-comp h3{
+  margin-top: 10px;
+  float: right;
+  font-size: 20px;
+}
+
+.experience-comp hr{
+  margin-top: 20px;
+}
+
 @import "./navigation.css";
 
 @import "./home.css";
@@ -42,7 +78,3 @@ li{
 @import "./education.css";
 
 @import "./contact.css";
-
-
-
-
